tests/vendor/invalid/semantics/undeclared_variable_in_default.c
//tags: simple, switch
int main(void) {
    int a = 10;
    switch (a) {
        case 1:
            break;

        default:
            return b;
            break;
    }
    return 0;
}